--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test rangesliderapp for mango",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "react-scripts test --env=jsdom",
     "start": "webpack-dev-server .",
     "build": "webpack ."
   },
@@ -29,9 +29,13 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "react-scripts": "^5.0.1"
   }
 }
